--- a/eduardo.html
+++ b/eduardo.html
@@ -59,28 +59,32 @@
                 </button>
                 <div id="demo0" class="collapse">
                     ESTOS SON LOS IDIOMAS
-                </div>
-            
+                </div><br>
+                <br>
                 <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo1">秘鲁共和国
                 </button>
                 <div id="demo1" class="collapse">
                     CHINA, KOREA
-                </div>
+                </div><br>
+                <br>
                 <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo2">idioma3
                 </button>
                 <div id="demo2" class="collapse">
                     ESTOS SON LOS IDIOMAS
-                </div>
+                </div><br>
+                <br>
                 <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo3">idioma4
                 </button>
                 <div id="demo3" class="collapse">
                     ESTOS SON LOS IDIOMAS
-                </div>
+                </div><br>
+                <br>
                 <button type="button" class="btn btn-secondary" data-bs-toggle="collapse" data-bs-target="#demo4">idioma5
                 </button>
                 <div id="demo4" class="collapse">
                     ESTOS SON LOS IDIOMAS
-                </div>
+                </div><br>
+                <br>
             </div>
         </div>
 </body>
