CAMBIOS DE CONTINENTE

--- a/index bandera.html
+++ b/index bandera.html
@@ -87,8 +87,8 @@
     </thead>
     <tbody>
       <tr>
-        <td><img src="/imagenes/bandera.jpg" alt=""></td>
-        <td><img src="/imagenes/escudo.jpg" alt=""></td>
+        <td><img src="imagenes/bandera.jpg" alt=""></td>
+        <td><img src="imagenes/escudo.jpg" alt=""></td>
       </tr>
      
     </tbody>
