--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -51,11 +51,11 @@
 
         <select class="form-select" aria-label="Disabled select example">
           <option selected>seleccione continente</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          <option>AMERICAS</option>
+          <option>AFRICA</option>
+          <option>OCEANIAS</option>
+          <option>EUROPA</option>
+          <option>ASIA</option>
         </select>
       </div>
       <div class="col-sm-6">
@@ -64,6 +64,8 @@
           <option selected>seleccione pais</option>
           <option value="1">One</option>
           <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Three</option>
           <option value="3">Three</option>
         </select>
       </div>
