--- a/oscar.html
+++ b/oscar.html
@@ -18,9 +18,9 @@
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
                         class="rounded-circle"></div>
                 <div class="col-sm-10">
-                    <h1 class="text-white text-center bg-secondary p-4">PAISES DEL MUNDO</h1>
+                    <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
                 </div>
-                
+            </div>
         </header>
         <div>
             <nav class="text-center">
