--- a/Denis.html
+++ b/Denis.html
@@ -23,10 +23,10 @@
       </div>
     </header>
     <nav class="text-center">
-      <button type="button" class="btn btn-success">Datos Generales</button>
-      <button type="button" class="btn btn-success">Datos Geográficos</button>
-      <button type="button" class="btn btn-success">Traducciones</button>
-      <button type="button" class="btn btn-success">Banderas</button>
+      <button type="button" class="btn btn-info">Datos Generales</button>
+      <button type="button" class="btn btn-info">Datos Geográficos</button>
+      <button type="button" class="btn btn-info">Traducciones</button>
+      <button type="button" class="btn btn-info">Banderas</button>
     </nav>
     <div>
       <div>
