--- a/oscar.html
+++ b/oscar.html
@@ -20,7 +20,7 @@
                 <div class="col-sm-10">
                     <h1 class="text-white text-center bg-secondary p-5">PAISES DEL MUNDO</h1>
                 </div>
-            </div>
+            </div><br>
         </header>
         <div>
             <nav class="text-center">
