--- a/datos.html
+++ b/datos.html
@@ -101,66 +101,63 @@
 
     <div>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste accusantium vitae, cumque molestiae eligendi
         odit nemo quasi excepturi voluptate dolorum velit pariatur corrupti aut nihil, mollitia, tempore ad voluptas
-        maiores.</div>
-    <div class="row">
-        <div class="col">
-            <div class="p-5">
-                <form class="form-inline" role="form">
-                    <div class="form-group">
-                        <label for="text">Capital:</label>
-                        <input type="text" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <label for="number">Poblacion:</label>
-                        <input type="texto" class="form-control">
-                        <div class="form-group">
-                            <label for="text">Idioma:</label>
-                            <input type="text" class="form-control">
-                        </div>
-                    </div>
-
-            </div>
-        </div>
-        <div class="col">
-            <div class="p-5">
-
-                <div class="form-group">
-                    <label for="text">Moneda:</label>
-                    <input type="text" class="form-control">
-
-                    <ol>Simbolo <label for="texto">Moneda:</label>
-                        <input type="text" class="form-control">
-                    </ol>
-                </div>
-                <ol></ol>
-                <div class="form-group">
-                    <label for="text">Forma de Gobierno:</label>
-                    <input type="text" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="text">Religion:</label>
-                    <input type="text" class="form-control">
-                </div>
-            </div>
-        </div>
-        <div class="col"></div>
+        maiores.
     </div>
-    
 
-    <!-- INICIO DEL FOOTER!!!!!!!!!!!!!! -->
-    <footer
-        class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start position-fixed bottom-0">
-        <div class="text-center p-3">
-            © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24" data-view-component="true">
-                <path fill-rule="evenodd"
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
-            <a class="text-decoration-none text-white"
-                href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
+    <div>
+        <div class="row">
+            <div class="col">
+                <div class="p-5">
+                    <h3 class="text-center">Datos Geograficos</h3>
+                    <table class="table table-success table-striped table-hover">
+
+                        <tr>
+                            <td>Capital:</td>
+                        </tr>
+
+                        <tr>
+                            <td>Poblacion:</td>
+                        </tr>
+
+                        <tr>
+                            <td>Idioma:</td>
+                        </tr>
+
+
+
+                        <tr>
+                            <td>Forma de Gobierno:</td>
+                        </tr>
+                        <tr>
+                            <td>Religion:</td>
+                        </tr>
+                        <tr>
+                            <td>Moneda:</td>
+                        </tr>
+
+
+
+                    </table>
+                </div>
+            </div>
+
+
+            <!-- INICIO DEL FOOTER!!!!!!!!!!!!!! -->
+            <footer
+                class="container-fluid bg-secondary bg-gradient text-center text-white text-lg-start position-fixed bottom-0">
+                <div class="text-center p-3">
+                    © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24"
+                        data-view-component="true">
+                        <path fill-rule="evenodd"
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+                        </path>
+                    </svg>
+                    <a class="text-decoration-none text-white"
+                        href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
+                </div>
+            </footer>
         </div>
-    </footer>
-
+    </div>
 </body>
 
 
