--- a/Denis.html
+++ b/Denis.html
@@ -27,7 +27,7 @@
       <button type="button" class="btn btn-info">Datos Geográficos</button>
       <button type="button" class="btn btn-info">Traducciones</button>
       <button type="button" class="btn btn-info">Banderas</button>
-    </nav>
+    </nav><br>
     <div>
       <div>
         <div class="row">
