--- a/Denis.html
+++ b/Denis.html
@@ -15,10 +15,10 @@
   <div class="container">
     <header>
       <div class="row">
-        <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
+        <div class="col-sm-5"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
             class="rounded-circle"></div>
-        <div class="col-sm-10">
-          <h1 class="text-center text-black p-5">PAISES DEL MUNDO</h1>
+        <div class="col-sm-7">
+          <h1 class="text-black p-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
     </header>
