--- a/index-richard.html
+++ b/index-richard.html
@@ -43,8 +43,8 @@
       <div class="row align-middle">
         <div class="col-sm-6">
           <h2>continente</h2>
-          <select class="form-select" aria-label="Disabled select example">
-            <option selected>seleccione continente</option>
+          <select class="form-select">
+            <option >seleccione continente</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
@@ -54,8 +54,8 @@
         </div>
         <div class="col-sm-6">
           <h2>paises</h2>
-          <select class="form-select" aria-label="Disabled select example">
-            <option selected>seleccione pais</option>
+          <select class="form-select">
+            <option >seleccione pais</option>
             <option value="1">One</option>
             <option value="2">Two</option>
             <option value="3">Three</option>
