--- a/indexdark.html
+++ b/indexdark.html
@@ -243,22 +243,22 @@
                         <div class="row ms-5">
                             <div class="col">
                                 <div>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma1">Idioma1</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma1">Idioma1</button>
                                         <div id="idioma1" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma2">Idioma2</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma2">Idioma2</button>
                                         <div id="idioma2" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma3">Idioma3</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma3">Idioma3</button>
                                         <div id="idioma3" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma4">Idioma4</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma4">Idioma4</button>
                                         <div id="idioma4" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
@@ -267,22 +267,22 @@
                             </div>
                             <div class="col">
                                 <div>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma5">Idioma5</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma5">Idioma5</button>
                                         <div id="idioma5" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma6">Idioma6</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma6">Idioma6</button>
                                         <div id="idioma6" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma7">Idioma7</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma7">Idioma7</button>
                                         <div id="idioma7" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button data-bs-toggle="collapse" data-bs-target="#idioma8">Idioma8</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma8">Idioma8</button>
                                         <div id="idioma8" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
