--- a/index-richard.html
+++ b/index-richard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
         <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px"
             class="rounded-circle"></div>
         <div class="col-sm-10">
-          <h1 class="text-center text-black p-5">PAISES DEL MUNDO</h1>
+          <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
     </header>
