--- a/index traduccion.html
+++ b/index traduccion.html
@@ -49,21 +49,23 @@
       <div class="col-sm-6">
         <h2>continente</h2>
 
-        <select class="form-select" >
+        <select class="form-select">
           <option>seleccione continente</option>
-          <option>1</option>
-          <option>2</option>
-          <option>3</option>
-          <option>4</option>
-          <option>5</option>
+          <option>AMERICAS</option>
+          <option>AFRICA</option>
+          <option>OCEANIAS</option>
+          <option>EUROPA</option>
+          <option>ASIA</option>
         </select>
       </div>
       <div class="col-sm-6">
         <h2>paises</h2>
-        <select class="form-select" >
-          <option >seleccione pais</option>
+        <select class="form-select">
+          <option>seleccione pais</option>
           <option value="1">One</option>
           <option value="2">Two</option>
+          <option value="3">Three</option>
+          <option value="3">Three</option>
           <option value="3">Three</option>
         </select>
       </div>
