cambio de tamaño letra

--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -68,15 +68,14 @@
           <option value="3">Three</option>
           <option value="3">Three</option>
         </select>
-      </div>
+      </div><br>
        <div style="text-align:center;" >
       <ul >
-        <h6>frontera</h6>
-        <h6>frontera</h6>
-        <h6>frontera</h6>
-        <h6>frontera</h6>
-        <h6>frontera</h6>
-        <h6>frontera</h6>
+        <h3>frontera</h3>
+        <h3>frontera</h3>
+        <h3>frontera</h3>
+        <h3>frontera</h3>
+        <h3>frontera</h3>
         
       </ul>
     </div>
