--- a/eduardo.html
+++ b/eduardo.html
@@ -21,14 +21,14 @@
                         class="rounded-circle">
                 </div>
                 <div class="col-sm-10">
-                    <h1 class="text-center text-white bg-secondary p-5">PAISES DEL MUNDO</h1>
+                    <h1 class="text-center text-black pt-5">PAISES DEL MUNDO</h1>
                 </div>
             </div>
             <nav class="text-center">
-                <button type="button" class="btn btn-primary">Datos Generales</button>
-                <button type="button" class="btn btn-primary">Datos Geográficos</button>
-                <button type="button" class="btn btn-primary">Traducciones</button>
-                <button type="button" class="btn btn-primary">Banderas</button>
+                <button type="button" class="btn btn-info">Datos Generales</button>
+                <button type="button" class="btn btn-info">Datos Geográficos</button>
+                <button type="button" class="btn btn-info">Traducciones</button>
+                <button type="button" class="btn btn-info">Banderas</button>
             </nav>
         </header>
 
