--- a/Denis.html
+++ b/Denis.html
@@ -13,12 +13,12 @@
 
 <body>
   <div class="container">
-    <header>
+    <header class="mt-3">
       <div class="row">
         <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
             class="rounded-circle"></div>
         <div class="col-sm-10">
-          <h1 class="text-black text-center p-5">PAISES DEL MUNDO</h1>
+          <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
     </header>
