--- a/index bandera.html
+++ b/index bandera.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background-color:#75969c;">
-  <div class="container mt-3">
+  <div class="container ">
     <header>
       <div class="row">
         <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px"
@@ -23,7 +23,7 @@
       </div>
     </header>
     <nav>
-      <div class="container mt-3">
+      <div>
 
 
         <ul class="nav nav-tabs nav-justified">
@@ -77,7 +77,7 @@
 
     </div>
   </div>
-<div class="container mt-3">
+<div>
   <h2>banderas</h2>
              
   <table class="table table-bordered">
