--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body style="background-color:#75969c;">
-  <div class="container mt-3">
+  <div class="container">
     <header>
       <div class="row">
         <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px"
