--- a/Denis.html
+++ b/Denis.html
@@ -22,14 +22,14 @@
         </div>
       </div>
     </header>
-    <nav class="text-center">
+    <nav class="text-center mt-4">
       <button type="button" class="btn btn-info">Datos Generales</button>
       <button type="button" class="btn btn-info">Datos Geográficos</button>
       <button type="button" class="btn btn-info">Traducciones</button>
       <button type="button" class="btn btn-info">Banderas</button>
-    </nav><br>
+    </nav>
     <div>
-      <div>
+      <div class="mt-4">
         <div class="row">
           <div class="col">
             <p class="h3 text-center">Continente:</p><select name="continente" class="form-select form-select-sm">
@@ -48,7 +48,7 @@
           </div>
         </div>
       </div>
-    </div><br>
+    </div>
 <table class="table table-stripped">
   <tr>
     <th class="text-center">Capital</th>
