--- a/oscar.html
+++ b/oscar.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container mt-4">
         <header class="mt-3">
             <div class="row">
                 <div class="col-sm-2"><img src="imagenes/chinchetas recortadas (1).jpg" width="200px" height="150px"
@@ -20,7 +20,7 @@
                 <div class="col-sm-10">
                     <h1 class="text-black text-center pt-5">PAISES DEL MUNDO</h1>
                 </div>
-            </div><br>
+            </div>
         </header>
         <div>
             <nav class="text-center">
@@ -30,7 +30,7 @@
                 <button type="button" class="btn btn-info">Banderas</button>
             </nav>
         </div>
-        <div class="tab-content">
+        <div class="tab-content mt-4">
             <div id="datos generales" class="container tab-pane active"><br>
                 <form action="" method="post">
                     <div class="row">
@@ -55,7 +55,7 @@
             <div id="traduccion" class="container tab-pane fade"><br>
             </div>
             <div id="banderas" class="container tab-pane fade"><br>
-            </div><br>
+            </div>
             <div class="container text-center">
                 <h3 class="frontera1">Frontera 1</h3>
                 <h3 class="frontera2">Frontera 2</h3>
