--- a/oscar.html
+++ b/oscar.html
@@ -52,7 +52,7 @@
                     </div>
                 </form>
             </div>
-            <div id="traduccion" class="container tab-pane fade"><br>
+            <div id="traduccion" class="container tab-pane fade mt-4"><br>
             </div>
             <div id="banderas" class="container tab-pane fade"><br>
             </div>
