cambio de tamaño de imagen

--- a/index bandera.html
+++ b/index bandera.html
@@ -15,8 +15,7 @@
   <div class="container ">
     <header>
       <div class="row">
-        <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px"
-            class="rounded-circle"></div>
+        <div class="col-sm-2"><img src="imagenes/logo.jpg" width="200px" height="200px" class="rounded-circle"></div>
         <div class="col-sm-10">
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
@@ -68,7 +67,23 @@
           <option value="3">Three</option>
         </select>
       </div>
+      <h2>banderas</h2>
 
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>bandera</th>
+            <th>escudo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><img src="https://flagcdn.com/hu.svg" width="300" height="150"></td>
+            <td><img src="imagenes/escudo.jpg" width="200" height="100"></td>
+          </tr>
+
+        </tbody>
+      </table>
 
 
 
@@ -77,25 +92,9 @@
 
     </div>
   </div>
-<div>
-  <h2>banderas</h2>
-             
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>bandera</th>
-        <th>escudo</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><img src="imagenes/bandera.jpg" alt=""></td>
-        <td><img src="imagenes/escudo.jpg" alt=""></td>
-      </tr>
-     
-    </tbody>
-  </table>
-</div>
+
+
+  </div>
 
 </body>
 
