--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -68,8 +68,8 @@
           <option value="3">Three</option>
           <option value="3">Three</option>
         </select>
-      </div><br>
-       <div style="text-align:center;" >
+      </div>
+       <div class="text-center mt-4">
       <ul >
         <h3>frontera</h3>
         <h3>frontera</h3>
