--- a/index bandera.html
+++ b/index bandera.html
@@ -20,11 +20,9 @@
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
-    </header>
+      
     <nav>
-      <div>
-
-
+      <div class="mt-3">
         <ul class="nav nav-tabs nav-justified">
           <li class="nav-item">
             <a class="nav-link active" href="#">DATOS GENERALES</a>
@@ -41,7 +39,9 @@
 
         </ul>
       </div>
-    </nav><br><br><br>
+    </nav>
+    </header>
+   
     <div class="row align-middle">
 
       <div class="col-sm-6">
