--- a/index copy-fronteras.html
+++ b/index copy-fronteras.html
@@ -20,13 +20,9 @@
         <div class="col-sm-10">
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
-      </div>
-    </header>
-    <br>
+      </div>    
     <nav>
-      <div>
-
-
+      <div class="mt-3">
         <ul class="nav nav-tabs nav-justified">
           <li class="nav-item">
             <a class="nav-link active" href="#">DATOS GENERALES</a>
@@ -40,10 +36,10 @@
           <li class="nav-item">
             <a class="nav-link active" href="#">BANDERA</a>
           </li>
-
         </ul>
       </div>
-    </nav><br><br><br>
+    </nav>
+    </header>
     <div class="row align-middle">
 
       <div class="col-sm-6">
