--- a/index traduccion.html
+++ b/index traduccion.html
@@ -21,12 +21,9 @@
           <h1 class="text-center p-5">PAISES DEL MUNDO</h1>
         </div>
       </div>
-    </header>
-    <br>
+      
     <nav>
-      <div>
-
-
+      <div class="mt-3">
         <ul class="nav nav-tabs nav-justified">
           <li class="nav-item">
             <a class="nav-link active" href="#">DATOS GENERALES</a>
@@ -43,7 +40,8 @@
 
         </ul>
       </div>
-    </nav><br><br><br>
+    </nav>
+    </header>
     <div class="row align-middle">
 
       <div class="col-sm-6">
