--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="float-start" style="width: 150px; height: 120px">
                             <img src="images/world.png" style="width: 150px; height: 120px">
                         </div>
-                        <h1 class="text-center overflow-hidden" style="height: 120px !important; padding-top: 40px;">
+                        <h1 class="text-center overflow-hidden" style="height: 120px !important; padding-top: 40px; text-shadow: 0.1em 0.1em rgb(189, 189, 189)">
                             PAISES DEL MUNDO
                         </h1>
                     </div>
@@ -100,11 +100,21 @@
                                     <p><strong>Población:</strong> _____</p>
                                 </div>
                                 <div class="d-block">
+                                    <p><strong>Región:</strong> _____</p>
+                                </div>
+                                <div class="d-block">
+                                    <p><strong>Área:</strong> _____</p>
+                                </div>
+                                
+                                <div class="d-block">
                                     <p><strong>Moneda:</strong> _____</p>
                                 </div>
                                 <div class="d-block float-end">
                                     <div class="d-block">
-                                        <p><strong>nombre:</strong> _____</p>
+                                        <p><strong>Código:</strong> _____</p>
+                                    </div>
+                                    <div class="d-block">
+                                        <p><strong>Nombre:</strong> _____</p>
                                     </div>
                                     <div class="d-block">
                                         <p><strong>Símbolo:</strong> _____</p>
@@ -288,7 +298,7 @@
 
                             </div>
                         </div>
-                        <table class="table table-bordered">
+                        <table class="table table-bordered mt-3">
                             <tr>
                                 <th>BANDERA</th>
                                 <th>ESCUDO</th>
