--- a/indexdark.html
+++ b/indexdark.html
@@ -243,22 +243,26 @@
                         <div class="row ms-5">
                             <div class="col">
                                 <div>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma1">Idioma1</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma1">Idioma1</button>
                                         <div id="idioma1" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma2">Idioma2</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma2">Idioma2</button>
                                         <div id="idioma2" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma3">Idioma3</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma3">Idioma3</button>
                                         <div id="idioma3" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma4">Idioma4</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma4">Idioma4</button>
                                         <div id="idioma4" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
@@ -267,22 +271,26 @@
                             </div>
                             <div class="col">
                                 <div>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma5">Idioma5</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma5">Idioma5</button>
                                         <div id="idioma5" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma6">Idioma6</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma6">Idioma6</button>
                                         <div id="idioma6" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma7">Idioma7</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma7">Idioma7</button>
                                         <div id="idioma7" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
                                     </h4>
-                                    <h4><button class="rounded" data-bs-toggle="collapse" data-bs-target="#idioma8">Idioma8</button>
+                                    <h4><button class="rounded" data-bs-toggle="collapse"
+                                            data-bs-target="#idioma8">Idioma8</button>
                                         <div id="idioma8" class="collapse">
                                             <span>pais1, pais2, pais3</span>
                                         </div>
@@ -340,17 +348,18 @@
             <button class="bg-transparent cubod" type="reset"><img src="imagenes/3d-cube-sphere.svg"
                     width="140px"></button>
         </div>  -->
-    <div class="container-fluid bg-secondary rounded bg-gradient text-center text-white text-lg-start bottom-0">
-        <div class="text-center small p-0">
-            © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24" data-view-component="true">
-                <path fill-rule="evenodd"
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
-            <a class="text-decoration-none text-white"
-                href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
+        <div class="container-fluid bg-secondary rounded bg-gradient text-center text-white text-lg-start bottom-0">
+            <div class="text-center small p-0">
+                © 2022 Copyleft: <svg height="24" viewBox="0 0 16 16" version="1.1" width="24"
+                    data-view-component="true">
+                    <path fill-rule="evenodd"
+                        d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+                    </path>
+                </svg>
+                <a class="text-decoration-none text-white"
+                    href="https://github.com/jdiazbasgit/becaonce2ed">github.com/jdiazbasgit/becaonce2ed</a></label>
+            </div>
         </div>
-    </div>
     </footer>
 </body>
 
