--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
                                 data-bs-target="#idioma1">
                                 Idioma 1
                             </button>
+
                             <button class="btn cbtn rounded-0 fw-bold" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#idioma2">
                                 Idioma 2
@@ -252,7 +253,7 @@
                             </div>
                             <div class="collapse" id="idioma4">
                                 <div class="card card-body">
-                                    Idioma 4 HOLA KAPULLO ....
+                                    Idioma 4....
                                 </div>
                             </div>
 
