--- a/4nys3c/index.html
+++ b/4nys3c/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/4nys3c/css/styles.css">
-    <link rel="preload" href="/4nys3c/javascript/script.js" as="script">
+    <link rel="preloaad" href="/4nys3c/css/styles.css" as="styles">
+    <link rel="script" href="/4nys3c/javascript/script.js">
+    <link rel="preloaad" href="/4nys3c/javascript/main.js" as="script">
     <title>4nys3c</title>
-    <script ></script>
 </head>
 <body>
-
-    <h1></h1>
     
 </body>
 </html>
