--- a/4nys3c/index.html
+++ b/4nys3c/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/4nys3c/css/styles.css">
     <link rel="preloaad" href="/4nys3c/css/styles.css" as="styles">
-    <link rel="script" href="/4nys3c/javascript/script.js">
-    <link rel="preloaad" href="/4nys3c/javascript/main.js" as="script">
     <title>4nys3c</title>
+    <script src="javascript/main.js"></script>
 </head>
 <body>
+
+    <h1 id="nombre"></h1>
+    <button onclick="minombre()">Nombre</button>
     
 </body>
 </html>
