--- a/ejercicio.html
+++ b/ejercicio.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src=""></script>
     <title>Document</title>
+    <script src="C:\Users\UsuarioM\Documents\cursoOnce\modulo1scrip.js"></script>
 </head>
 <body>
     <h1 id="h1"></h1>
-
-    <button onclick="nombre()"></button>
+    <button onclick="nombre()">pulsar boton</button>
 </body>
 </html>
