--- a/nombre alterno.html
+++ b/nombre alterno.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Documents</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <script src="archivo.js"></script>
 </head>
-
 <body>
     <h1 id="h1"></h1>
-    <button onclick="NombreAlterno()"></button>
+    <button onclick="NombreAlterno()">Pulsar</button>
 </body>
-
 </html>
