--- a/ejercicio.html
+++ b/ejercicio.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src=""></script>
     <title>Document</title>
-    <script src="C:\Users\UsuarioM\Documents\cursoOnce\modulo1scrip.js"></script>
+    <script src="scrip.js"></script>
 </head>
 <body>
     <h1 id="h1"></h1>
